--- a/plasma/src/main/res/xml/pref_headers.xml
+++ b/plasma/src/main/res/xml/pref_headers.xml
@@ -3,15 +3,15 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="org.quuux.plasma.SettingsActivity$GeneralPreferenceFragment"
+        android:fragment="org.quuux.plasma.Settings$GeneralPreferenceFragment"
         android:title="@string/pref_header_general" />
 
     <header
-        android:fragment="org.quuux.plasma.SettingsActivity$NotificationPreferenceFragment"
+        android:fragment="org.quuux.plasma.Settings$NotificationPreferenceFragment"
         android:title="@string/pref_header_notifications" />
 
     <header
-        android:fragment="org.quuux.plasma.SettingsActivity$DataSyncPreferenceFragment"
+        android:fragment="org.quuux.plasma.Settings$DataSyncPreferenceFragment"
         android:title="@string/pref_header_data_sync" />
 
 </preference-headers>
