--- a/plasma/src/main/res/xml/fire_wallpaper.xml
+++ b/plasma/src/main/res/xml/fire_wallpaper.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <wallpaper
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:description="@string/plasma_wallpaper_description"
+    android:description="@string/fire_wallpaper_description"
     android:settingsActivity="org.quuux.plasma.SettingsActivity"
     />
